public interface Editable {
    void EditFile();
}
