public class Picture extends MediaFile {
    public Picture(User user, String description, float fileSize, int height, int length) {
        super(TypeOfFile.PICTURE, user, description, fileSize, height, length);
    }
}











