@startuml

title __SRC's Class Diagram__\n

  package  {
    class AdminUser {
        + AdminUser()
    }
  }
  

  package  {
    interface Editable {
        {abstract} + EditFile()
    }
  }
  

  package  {
    abstract class File {
        - description : String
        - fileSize : float
        # hashCode : int
        {static} + threshold : float
        {static} + BY_SIZE : Comparator<File>
        + File()
        + getFileSize()
        + toString()
        + equals()
        + hashCode()
    }
  }
  

  package  {
    class FileStorageList {
        # filesList : List<File>
        + toString()
    }
  }
  

  package  {
    class FileStorageSet {
        # filesSet : Collection<File>
        # filesTreeSet : Collection<File>
        + toString()
    }
  }
  

  package  {
    class MediaFile {
        - height : int
        - length : int
        {static} + heightThreshold : int
        {static} + lengthThreshold : int
        + MediaFile()
        + EditFile()
    }
  }
  

  package  {
    class NotRegisteredUser {
        + NotRegisteredUser()
    }
  }
  

  package  {
    class Pdf {
        + Pdf()
    }
  }
  

  package  {
    class Picture {
        + Picture()
    }
  }
  

  package  {
    class Program {
        {static} + main()
    }
  }
  

  package  {
    class RegularUser {
        + RegularUser()
    }
  }
  

  package  {
    class TextDocument {
        + TextDocument()
    }
  }
  

  package  {
    enum TypeOfFile {
      PDF
      WORD
      PICTURE
      VIDEO
      typeOfFileName
    }
  }
  

  package  {
    abstract class User {
        {static} - counter : int
        - name : String
        - surname : String
        - address : String
        - id : int
        - accessLevel : int
        # hashCode : int
        + getAccessLevel()
        + setAccessLevel()
        + getName()
        + User()
        + createPdf()
        + createWord()
        + createVideo()
        + createPicture()
        + toString()
        + hashCode()
    }
  }
  

  package  {
    class Validator {
        + isSizeIsFine()
        + isResolutionFine()
        + isAccessLevelFine()
    }
  }
  

  package  {
    class Video {
        - duration : double
        + Video()
    }
  }
  

  package  {
    class Word {
        + Word()
        + EditFile()
    }
  }
  

  AdminUser -up-|> RegularUser
  File o-- TypeOfFile : typeOfFile
  File o-- User : user
  MediaFile -up-|> Editable
  MediaFile -up-|> File
  NotRegisteredUser -up-|> User
  Pdf -up-|> TextDocument
  Picture -up-|> MediaFile
  RegularUser -up-|> NotRegisteredUser
  TextDocument -up-|> File
  User o-- Validator : validator
  Video -up-|> MediaFile
  Word -up-|> Editable
  Word -up-|> TextDocument


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
